--- a/template/layout/footer.html
+++ b/template/layout/footer.html
@@ -2,10 +2,10 @@
 <footer>
   <div>
     Copyright © {{date "2006"}}&nbsp;
-    <i style="color: red" class="iconfont icon-xiai"></i>&nbsp; {{.Title}}
+    <i class="iconfont icon-xiai" style="color: red"></i>&nbsp; {{.Title}}
   </div>
   <div>
-    mszlu.com | Powered by <a href="https://www.mszlu.com" target="__blank">码神之路go语言开发博客</a>
+    AnyWiki | Powered by <a href="https://www.mszlu.com" target="__blank"></a>
     Golang
   </div>
 </footer>
